<resources>
   <string name="app_name">RTVE</string>

   <!-- action bar -->
   <string name="action_add_camera">Add Camera</string>
   <string name="action_stop">Stop</string>
   <string name="action_save">Save Configuration</string>
   <string name="action_delete_config">Delete Configuration</string>

   <!-- add camera dialog -->
   <string name="dialog_add_camera_header">Add Camera</string>
   <string name="dialog_add_camera_camera_name">Camera Name</string>
   <string name="dialog_add_camera_lens_type">Lens Type:</string>
   <string name="dialog_add_camera_wide">Wide</string>
   <string name="dialog_add_camera_radio_tight">Tight</string>
   <string name="dialog_add_camera_DSLR">DSLR (30 min. limit)</string>
   <string name="dialog_add_camera_ok">OK</string>
   <string name="dialog_add_camera_cancel">Cancel</string>
   <string name="dialog_add_camera_error_invalid">Cannot add camera: Name invalid!</string>
   <string name="dialog_add_camera_cancel_not_unique">Cannot add camera: Name and Lens Type combination already used!</string>

   <!-- Landing screen -->
   <string name="title_activity_landing_screen">Landing Screen</string>
   <string name="landing_load_config">Load Camera Configuration</string>
   <string name="landing_title">Real Time Video Editor</string>
   <string name="landing_new_config">New Camera Configuration</string>
   <string name="landing_image_description">3 Cameras</string>
   <string name="save_config_name_prompt_hint">Configuration Name</string>
   <string name="save_config_name_prompt_text">Enter Configuration Name:</string>

   <!-- Load Configuration screen -->
   <string name="title_activity_load_configuration">Load Configuration</string>


</resources>
